@startuml
!theme mono

class EmailClassifierFacade {
    + add_preprocessing(feature: str): void
}

abstract class DataProcessorBase {
    + process(df: pd.DataFrame): pd.DataFrame
}

class DataProcessor {
    + process(df: pd.DataFrame): pd.DataFrame
}

class DataProcessorDecorator {
    - _processor: DataProcessorBase
    + process(df: pd.DataFrame): pd.DataFrame
}

class NoiseRemovalDecorator {
    - _processor: DataProcessorBase
    + process(df: pd.DataFrame): pd.DataFrame
}

class TranslatorDecorator {
    - _processor: DataProcessorBase
    + process(df: pd.DataFrame): pd.DataFrame
}

class UnicodeConversionDecorator {
    - _processor: DataProcessorBase
    + process(df: pd.DataFrame): pd.DataFrame
}

EmailClassifierFacade o-- DataProcessorBase
DataProcessorBase <|-- DataProcessor
DataProcessorBase <|-- DataProcessorDecorator
DataProcessorDecorator <|-- NoiseRemovalDecorator
DataProcessorDecorator <|-- TranslatorDecorator
DataProcessorDecorator <|-- UnicodeConversionDecorator

@enduml